# ROS_image_new

./: CMakeLists.txt  package.xml
config/: fusion_params.yaml
data/: 黑白棋盘标定摄像头.zip:Zone.Identifier
launch/: fusion_demo.launch
src/: recognize.py  transformer.py
